New in v0.5.12 (2009/03/??)
---------------------------
Add Epydoc output to web site and start documentation.
http://duplicity.nongnu.org/epydoc/index.html

bug #25838: Backup fails / ncftp - remote file already exists
https://savannah.nongnu.org/bugs/?25838


New in v0.5.11 (2009/03/08)
---------------------------
bug #25787: Usernames with @-sign are not handled properly
https://savannah.nongnu.org/bugs/?25787

Bug #333057: GnuPGInterface prints exit statuses incorrectly
https://bugs.launchpad.net/bugs/333057

bug #25696: ncftp error w/0.5.09 -- nested target directories
https://savannah.nongnu.org/bugs/?25696

bug #15664: When restoring backup: "OverflowError:
            long int too large to convert to int"
https://savannah.nongnu.org/bugs/?15664

patch #6761: More robust pexpect handling of SSH authentication
https://savannah.nongnu.org/patch/?6761

patch #6762: Wrong exit() used for 2.3/2.4 Python
https://savannah.nongnu.org/patch/?6762


New in v0.5.10 (2009/03/01)
---------------------------
The default filename format has changed from W3 style to a long
numeric style, YYYYMMDDTHHMMSSZ, with no delimiters, thus is now
compatible with Windows/Samba filesystems.  The time is UTC, not
local, so there will be no timezone or daylight savings time issues.

Duplicity still recognizes the old long filename format, and will
continue incremental backup chains if found.  The old format is
still available via the --old-filenames option (pending deprecation).

Users of --short-filenames or --time-separator should stop using these
options on their next full backup.  The new filenames are compatible
with your system.

The following options are pending deprecation and will be removed in a
future release:
    --time-separator
    --short-filenames
    --old-filenames

bug #19988: Incompatibility to Samba/SMB share
https://savannah.nongnu.org/bugs/?19988

bug #25097: Allow listing files from any time, not just current time
https://savannah.nongnu.org/bugs/?25097
